--- a/index.html
+++ b/index.html
@@ -1850,32 +1850,32 @@
                 <p class="section-subtitle">Size özel rehberlere ulaşmak için hedefinizi seçin</p>
             </div>
             <div class="goals-grid">
-                <a href="/hedef/aktif-olmak" class="goal-card">
+                <a href="pages/rehberler/evde-egzersiz.html" class="goal-card">
                     <div class="goal-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="30" cy="10" r="4" stroke="#0D7377" stroke-width="2.5"/><path d="M18 20L24 16L30 20L34 28" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M24 16L20 28L14 36" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M30 20L36 36" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round"/><path d="M20 28L28 30" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round"/><path d="M10 36H16" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round"/><path d="M34 36H40" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round"/></svg></div>
                     <div class="goal-title">Daha Aktif Olmak</div>
                     <div class="goal-link">Rehbere git →</div>
                 </a>
-                <a href="/hedef/kilo-vermek" class="goal-card">
+                <a href="pages/rehberler/kalori-acigi.html" class="goal-card">
                     <div class="goal-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24 8V38" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round"/><path d="M18 38H30" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round"/><path d="M10 16L24 12L38 16" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M6 28C6 24 10 16 10 16H18C18 16 14 24 14 28C14 28 10 28 6 28Z" stroke="#0D7377" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M30 16H38C38 16 34 24 34 28C34 28 38 28 42 28C42 24 38 16 38 16" stroke="#0D7377" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
                     <div class="goal-title">Sağlıklı Kiloya Ulaşmak</div>
                     <div class="goal-link">Rehbere git →</div>
                 </a>
-                <a href="/hedef/guclu-hissetmek" class="goal-card">
+                <a href="pages/rehberler/50-yas-egzersiz.html" class="goal-card">
                     <div class="goal-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 34L14 26C14 22 16 18 20 16L26 14C30 12 34 14 34 18V22C34 26 32 30 28 32L22 34" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M20 16L18 10" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round"/><path d="M14 26H22" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><circle cx="30" cy="18" r="2" fill="#0D7377" opacity="0.3"/><path d="M10 38L22 34L14 34" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
                     <div class="goal-title">Daha Güçlü Hissetmek</div>
                     <div class="goal-link">Rehbere git →</div>
                 </a>
-                <a href="/hedef/zihinsel-berraklik" class="goal-card">
+                <a href="pages/rehberler/uyku-kalitesi.html" class="goal-card">
                     <div class="goal-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24 40V28" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round"/><path d="M24 28C20 28 14 26 12 22C10 18 12 14 14 12C14 10 16 8 20 8C22 8 24 9 24 9C24 9 26 8 28 8C32 8 34 10 34 12C36 14 38 18 36 22C34 26 28 28 24 28Z" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M24 9V20" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M18 14C18 14 20 16 24 16" stroke="#0D7377" stroke-width="1.8" stroke-linecap="round"/><path d="M30 14C30 14 28 16 24 16" stroke="#0D7377" stroke-width="1.8" stroke-linecap="round"/><path d="M16 20C16 20 19 22 24 20" stroke="#0D7377" stroke-width="1.8" stroke-linecap="round"/><path d="M32 20C32 20 29 22 24 20" stroke="#0D7377" stroke-width="1.8" stroke-linecap="round"/></svg></div>
                     <div class="goal-title">Zihinsel Berraklık</div>
                     <div class="goal-link">Rehbere git →</div>
                 </a>
-                <a href="/hedef/beslenme" class="goal-card">
+                <a href="pages/rehberler/akdeniz-diyeti.html" class="goal-card">
                     <div class="goal-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24 12C20 12 14 16 14 24C14 32 18 38 24 38C30 38 34 32 34 24C34 16 28 12 24 12Z" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round"/><path d="M24 12C24 12 24 8 28 6" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round"/><path d="M22 14C22 14 18 10 20 6" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M20 24C20 24 22 26 24 24C26 22 28 24 28 24" stroke="#0D7377" stroke-width="1.5" stroke-linecap="round"/></svg></div>
                     <div class="goal-title">Daha İyi Beslenmek</div>
                     <div class="goal-link">Rehbere git →</div>
                 </a>
-                <a href="/hedef/uyku" class="goal-card">
+                <a href="pages/rehberler/uyku-kalitesi.html" class="goal-card">
                     <div class="goal-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M34 28C34 35 28.6 40 22 40C15.4 40 10 35 10 28C10 21 15.4 16 22 16C22 16 18 20 18 26C18 32 22 34 26 34C30 34 34 28 34 28Z" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><circle cx="34" cy="12" r="1.5" fill="#0D7377"/><circle cx="38" cy="18" r="1" fill="#0D7377"/><circle cx="30" cy="8" r="1" fill="#0D7377"/><path d="M36 8L37 6M37 8L38 7" stroke="#0D7377" stroke-width="1.5" stroke-linecap="round"/></svg></div>
                     <div class="goal-title">Daha İyi Uyumak</div>
                     <div class="goal-link">Rehbere git →</div>
