Fix all broken navigation links

--- a/index.html
+++ b/index.html
@@ -1696,7 +1696,7 @@
     <!-- HEADER -->
     <header class="header">
         <div class="header-inner">
-            <a href="/" class="logo">
+            <a href="index.html" class="logo">
                 <img src="images/logo.svg" alt="UzunYaşa" class="logo-img">
             </a>
             <nav class="nav">
@@ -1704,16 +1704,16 @@
                     <li class="nav-dropdown">
                         <a href="#" class="nav-link">Keşfet ▾</a>
                         <div class="nav-dropdown-content">
-                            <a href="/beslenme" class="nav-dropdown-item">🥗 Beslenme</a>
-                            <a href="/egzersiz" class="nav-dropdown-item">🏃 Egzersiz</a>
-                            <a href="/tedaviler" class="nav-dropdown-item">⚖️ Kilo Yönetimi</a>
-                            <a href="/zihin" class="nav-dropdown-item">🧠 Zihin & Davranış</a>
+                            <a href="pages/beslenme.html" class="nav-dropdown-item">🥗 Beslenme</a>
+                            <a href="pages/egzersiz.html" class="nav-dropdown-item">🏃 Egzersiz</a>
+                            <a href="pages/tedavi.html" class="nav-dropdown-item">⚖️ Kilo Yönetimi</a>
+                            <a href="pages/uyku-stres.html" class="nav-dropdown-item">🧠 Zihin & Davranış</a>
                         </div>
                     </li>
                     <li><a href="pages/araclar.html" class="nav-link">Araçlar</a></li>
                     <li><a href="pages/hikayeler.html" class="nav-link">Hikayeler</a></li>
                     <li><a href="pages/bilim.html" class="nav-link">Bilim</a></li>
-                    <li><a href="/hakkimizda" class="nav-link">Hakkımızda</a></li>
+                    <li><a href="pages/hakkimizda.html" class="nav-link">Hakkımızda</a></li>
                 </ul>
                 <a href="pages/test.html" class="btn btn-primary">Teste Başla</a>
             </nav>
@@ -1988,7 +1988,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="/tedaviler/karsilastir" class="btn btn-primary btn-lg">
+                <a href="pages/tedavi.html" class="btn btn-primary btn-lg">
                     Tedavi Seçeneklerini Karşılaştır →
                 </a>
             </div>
@@ -2175,7 +2175,7 @@
                 </div>
             </div>
             <div style="text-align: center; margin-top: 2rem;">
-                <a href="/hakkimizda/kurul" class="btn btn-outline">Danışma Kurulumuz →</a>
+                <a href="pages/hakkimizda.html#kurul" class="btn btn-outline">Danışma Kurulumuz →</a>
             </div>
         </div>
     </section>
@@ -2208,7 +2208,7 @@
         <div class="footer-inner">
             <div class="footer-top">
                 <div class="footer-brand">
-                    <a href="/" class="logo" style="margin-bottom: 1rem;">
+                    <a href="index.html" class="logo" style="margin-bottom: 1rem;">
                         <img src="images/logo.svg" alt="UzunYaşa" class="logo-img-large">
                     </a>
                     <p class="footer-tagline">"Bilimle daha uzun, daha iyi yaşam"</p>
@@ -2223,10 +2223,10 @@
                 <div class="footer-column">
                     <h4>Keşfet</h4>
                     <ul class="footer-links">
-                        <li><a href="/beslenme">Beslenme</a></li>
-                        <li><a href="/egzersiz">Egzersiz</a></li>
-                        <li><a href="/tedaviler">Tedaviler</a></li>
-                        <li><a href="/zihin">Zihin & Davranış</a></li>
+                        <li><a href="pages/beslenme.html">Beslenme</a></li>
+                        <li><a href="pages/egzersiz.html">Egzersiz</a></li>
+                        <li><a href="pages/tedavi.html">Tedaviler</a></li>
+                        <li><a href="pages/uyku-stres.html">Zihin & Davranış</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -2241,10 +2241,10 @@
                 <div class="footer-column">
                     <h4>Hakkımızda</h4>
                     <ul class="footer-links">
-                        <li><a href="/hakkimizda">Misyonumuz</a></li>
-                        <li><a href="/hakkimizda/kurul">Danışma Kurulu</a></li>
-                        <li><a href="/hakkimizda/editoryal">Editöryal Politika</a></li>
-                        <li><a href="/iletisim">İletişim</a></li>
+                        <li><a href="pages/hakkimizda.html">Misyonumuz</a></li>
+                        <li><a href="pages/hakkimizda.html#kurul">Danışma Kurulu</a></li>
+                        <li><a href="pages/hakkimizda.html#editoryal">Editöryal Politika</a></li>
+                        <li><a href="pages/hakkimizda.html#iletisim">İletişim</a></li>
                     </ul>
                 </div>
             </div>
