Add CNAME for uzunyasa.com and update redirect URLs

--- a/index.html
+++ b/index.html
@@ -2168,7 +2168,7 @@
             <form class="cta-newsletter" action="https://formsubmit.co/uzunyasa.info@gmail.com" method="POST">
                 <input type="hidden" name="_subject" value="Yeni Newsletter Abonesi!">
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="https://cem2im.github.io/uzunyasa-website/pages/tesekkurler.html">
+                <input type="hidden" name="_next" value="https://uzunyasa.com/pages/tesekkurler.html">
                 <input type="email" name="email" class="cta-input" placeholder="E-posta adresiniz" required>
                 <button type="submit" class="btn">Abone Ol</button>
             </form>
