--- a/pages/blog.html
+++ b/pages/blog.html
@@ -543,7 +543,7 @@
             <form class="newsletter-form" action="https://formsubmit.co/uzunyasa.info@gmail.com" method="POST">
                 <input type="hidden" name="_subject" value="Yeni Blog Abonesi!">
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="https://cem2im.github.io/uzunyasa-website/pages/tesekkurler.html">
+                <input type="hidden" name="_next" value="https://uzunyasa.com/pages/tesekkurler.html">
                 <input type="email" name="email" placeholder="E-posta adresiniz" required>
                 <button type="submit">Abone Ol</button>
             </form>
