--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -633,7 +633,7 @@
             <form action="https://formsubmit.co/uzunyasa.info@gmail.com" method="POST" style="display: flex; flex-direction: column; gap: 1rem;">
                 <input type="hidden" name="_subject" value="UzunYaşa İletişim Formu">
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="https://cem2im.github.io/uzunyasa-website/pages/tesekkurler.html">
+                <input type="hidden" name="_next" value="https://uzunyasa.com/pages/tesekkurler.html">
                 
                 <input type="text" name="isim" placeholder="Adınız Soyadınız" required style="padding: 1rem; border: 1px solid #e5e7eb; border-radius: 10px; font-size: 1rem;">
                 <input type="email" name="email" placeholder="E-posta Adresiniz" required style="padding: 1rem; border: 1px solid #e5e7eb; border-radius: 10px; font-size: 1rem;">
