Update form email to cemsimsek11@gmail.com

--- a/index.html
+++ b/index.html
@@ -2165,7 +2165,7 @@
             </div>
             <div class="cta-divider">veya</div>
             <p style="margin-bottom: 1rem; opacity: 0.9;">Haftalık bültenimize abone olun</p>
-            <form class="cta-newsletter" action="https://formsubmit.co/uzunyasa.info@gmail.com" method="POST">
+            <form class="cta-newsletter" action="https://formsubmit.co/cemsimsek11@gmail.com" method="POST">
                 <input type="hidden" name="_subject" value="Yeni Newsletter Abonesi!">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_next" value="https://uzunyasa.com/pages/tesekkurler.html">
