--- a/pages/blog.html
+++ b/pages/blog.html
@@ -540,7 +540,7 @@
         <div class="newsletter-section">
             <h2>📬 Haftalık Bülten</h2>
             <p>En güncel sağlık haberleri ve ipuçları için abone olun</p>
-            <form class="newsletter-form" action="https://formsubmit.co/uzunyasa.info@gmail.com" method="POST">
+            <form class="newsletter-form" action="https://formsubmit.co/cemsimsek11@gmail.com" method="POST">
                 <input type="hidden" name="_subject" value="Yeni Blog Abonesi!">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_next" value="https://uzunyasa.com/pages/tesekkurler.html">
