--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -630,7 +630,7 @@
             <h2 class="section-title" style="text-align: center;">İletişim</h2>
             <p class="section-subtitle" style="text-align: center; margin-bottom: 2rem;">Sorularınız veya önerileriniz için bize yazın.</p>
             
-            <form action="https://formsubmit.co/uzunyasa.info@gmail.com" method="POST" style="display: flex; flex-direction: column; gap: 1rem;">
+            <form action="https://formsubmit.co/cemsimsek11@gmail.com" method="POST" style="display: flex; flex-direction: column; gap: 1rem;">
                 <input type="hidden" name="_subject" value="UzunYaşa İletişim Formu">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_next" value="https://uzunyasa.com/pages/tesekkurler.html">
