--- a/index.html
+++ b/index.html
@@ -1995,6 +1995,95 @@
         </div>
     </section>
 
+    <!-- HEALTH WHEEL SECTION -->
+    <section style="padding: 5rem 2rem; background: linear-gradient(180deg, #f8fafc 0%, white 100%);">
+        <style>
+            .health-wheel-home {
+                position: relative;
+                width: 350px;
+                height: 350px;
+                margin: 0 auto 2rem;
+            }
+            .hw-center {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                width: 100px;
+                height: 100px;
+                background: linear-gradient(135deg, #195157, #2a7d83);
+                border-radius: 50%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                z-index: 10;
+                box-shadow: 0 10px 40px rgba(25, 81, 87, 0.4);
+                transition: all 0.4s ease;
+            }
+            .hw-center svg { width: 36px; height: 36px; color: white; }
+            .health-wheel-home:hover .hw-center { transform: translate(-50%, -50%) scale(0.85); }
+            .hw-spec {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 60px;
+                height: 60px;
+                margin: -30px 0 0 -30px;
+                background: white;
+                border: 2px solid #195157;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 0.55rem;
+                font-weight: 600;
+                color: #195157;
+                text-align: center;
+                padding: 0.2rem;
+                opacity: 0;
+                transform: scale(0);
+                transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+                box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            }
+            .health-wheel-home:hover .hw-spec { opacity: 1; transform: scale(1); }
+            .health-wheel-home:hover .hw-spec:nth-child(1) { transform: translate(0, -120px); }
+            .health-wheel-home:hover .hw-spec:nth-child(2) { transform: translate(85px, -85px); }
+            .health-wheel-home:hover .hw-spec:nth-child(3) { transform: translate(120px, 0); }
+            .health-wheel-home:hover .hw-spec:nth-child(4) { transform: translate(85px, 85px); }
+            .health-wheel-home:hover .hw-spec:nth-child(5) { transform: translate(0, 120px); }
+            .health-wheel-home:hover .hw-spec:nth-child(6) { transform: translate(-85px, 85px); }
+            .health-wheel-home:hover .hw-spec:nth-child(7) { transform: translate(-120px, 0); }
+            .health-wheel-home:hover .hw-spec:nth-child(8) { transform: translate(-85px, -85px); }
+            .hw-spec:nth-child(1) { transition-delay: 0s; }
+            .hw-spec:nth-child(2) { transition-delay: 0.04s; }
+            .hw-spec:nth-child(3) { transition-delay: 0.08s; }
+            .hw-spec:nth-child(4) { transition-delay: 0.12s; }
+            .hw-spec:nth-child(5) { transition-delay: 0.16s; }
+            .hw-spec:nth-child(6) { transition-delay: 0.2s; }
+            .hw-spec:nth-child(7) { transition-delay: 0.24s; }
+            .hw-spec:nth-child(8) { transition-delay: 0.28s; }
+        </style>
+        <div style="text-align: center; margin-bottom: 1rem;">
+            <h2 style="font-size: 2rem; font-weight: 800; color: #1f2937;">Sağlık Bir Bütündür</h2>
+            <p style="color: #6b7280;">Danışma kurulumuz farklı branşlardan uzmanlardan oluşmaktadır</p>
+        </div>
+        <div class="health-wheel-home">
+            <div class="hw-spec">Gastro-<br>enteroloji</div>
+            <div class="hw-spec">Endokri-<br>noloji</div>
+            <div class="hw-spec">İç<br>Hastalıkları</div>
+            <div class="hw-spec">Kardi-<br>yoloji</div>
+            <div class="hw-spec">Beslenme<br>& Diyet</div>
+            <div class="hw-spec">Egzersiz<br>Fizyolojisi</div>
+            <div class="hw-spec">Psiki-<br>yatri</div>
+            <div class="hw-spec">Halk<br>Sağlığı</div>
+            <div class="hw-center">
+                <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
+            </div>
+        </div>
+    </section>
+
     <!-- SCIENCE SECTION -->
     <section class="science-section">
         <video class="section-video" autoplay muted loop playsinline>
