Rename section to Danışma Kurulumuz and remove old team photos section

--- a/index.html
+++ b/index.html
@@ -2092,8 +2092,8 @@
             }
         </style>
         <div style="text-align: center; margin-bottom: 1rem;">
-            <h2 style="font-size: 2rem; font-weight: 800; color: #1f2937;">Sağlık Bir Bütündür</h2>
-            <p style="color: #6b7280;">Danışma kurulumuz farklı branşlardan uzmanlardan oluşmaktadır</p>
+            <h2 style="font-size: 2rem; font-weight: 800; color: #1f2937;">Danışma Kurulumuz</h2>
+            <p style="color: #6b7280;">Sağlık bir bütündür — farklı branşlardan uzmanlardan oluşmaktadır</p>
         </div>
         <div class="health-wheel-home">
             <div class="hw-spec">Gastro-<br>enteroloji</div>
@@ -2196,74 +2196,6 @@
             </div>
             <div style="text-align: center; margin-top: 2rem;">
                 <a href="pages/rehberler.html" class="btn btn-outline btn-lg">Tüm Rehberleri Gör →</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- TEAM SECTION -->
-    <section class="team-section">
-        <div class="section-inner">
-            <div class="section-header">
-                <h2 class="section-title">Türkiye'nin önde gelen uzmanlarıyla</h2>
-            </div>
-            <p class="team-intro" style="text-align: center; color: var(--text-medium); margin-bottom: 3rem;">
-                İçeriklerimiz gastroenterolog, endokrinolog, diyetisyen ve egzersiz fizyologlarından 
-                oluşan danışma kurulumuz tarafından gözden geçirilmektedir.
-            </p>
-            <div class="team-grid">
-                <div class="team-card">
-                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?w=200&h=200&fit=crop&crop=face" alt="Gastroenterolog"></div>
-                    <div class="team-role">Gastroenterolog</div>
-                    <div class="team-specialty">Sindirim Sistemi Uzmanı</div>
-                </div>
-                <div class="team-card">
-                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?w=200&h=200&fit=crop&crop=face" alt="Endokrinolog"></div>
-                    <div class="team-role">Endokrinolog</div>
-                    <div class="team-specialty">Hormon & Metabolizma</div>
-                </div>
-                <div class="team-card">
-                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1622253692010-333f2da6031d?w=200&h=200&fit=crop&crop=face" alt="İç Hastalıkları"></div>
-                    <div class="team-role">İç Hastalıkları</div>
-                    <div class="team-specialty">Dahiliye Uzmanı</div>
-                </div>
-                <div class="team-card">
-                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1537368910025-700350fe46c7?w=200&h=200&fit=crop&crop=face" alt="Kardiyolog"></div>
-                    <div class="team-role">Kardiyolog</div>
-                    <div class="team-specialty">Kalp & Damar Uzmanı</div>
-                </div>
-                <div class="team-card">
-                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1582750433449-648ed127bb54?w=200&h=200&fit=crop&crop=face" alt="Nefrolog"></div>
-                    <div class="team-role">Nefrolog</div>
-                    <div class="team-specialty">Böbrek Hastalıkları Uzmanı</div>
-                </div>
-                <div class="team-card">
-                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1651008376811-b90baee60c1f?w=200&h=200&fit=crop&crop=face" alt="Ortopedist"></div>
-                    <div class="team-role">Ortopedist</div>
-                    <div class="team-specialty">Kas & İskelet Sistemi</div>
-                </div>
-                <div class="team-card">
-                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1594824476967-48c8b964273f?w=200&h=200&fit=crop&crop=face" alt="Fizik Tedavi"></div>
-                    <div class="team-role">Fizik Tedavi Uzmanı</div>
-                    <div class="team-specialty">Rehabilitasyon</div>
-                </div>
-                <div class="team-card">
-                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1614608682850-e0d6ed316d47?w=200&h=200&fit=crop&crop=face" alt="Dermatolog"></div>
-                    <div class="team-role">Dermatolog</div>
-                    <div class="team-specialty">Cilt Sağlığı Uzmanı</div>
-                </div>
-                <div class="team-card">
-                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1607990281513-2c110a25bd8c?w=200&h=200&fit=crop&crop=face" alt="Diyetisyen"></div>
-                    <div class="team-role">Diyetisyen</div>
-                    <div class="team-specialty">Beslenme Uzmanı</div>
-                </div>
-                <div class="team-card">
-                    <div class="team-avatar"><img src="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?w=200&h=200&fit=crop&crop=face" alt="Egzersiz Fizyologu"></div>
-                    <div class="team-role">Egzersiz Fizyologu</div>
-                    <div class="team-specialty">Hareket & Performans</div>
-                </div>
-            </div>
-            <div style="text-align: center; margin-top: 2rem;">
-                <a href="pages/hakkimizda.html#kurul" class="btn btn-outline">Danışma Kurulumuz →</a>
             </div>
         </div>
     </section>
