Convert science section to blog post, add blog section to main page

--- a/index.html
+++ b/index.html
@@ -2114,26 +2114,50 @@
         </div>
     </section>
 
-    <!-- SCIENCE SECTION -->
-    <section class="science-section">
-        <video class="section-video" autoplay muted loop playsinline>
-            <source src="videos/background-2.mp4" type="video/mp4">
-        </video>
-        <div class="section-overlay"></div>
-        <div class="section-inner">
-            <div class="science-content">
-                <div class="science-text">
-                    <h2>Bilimle daha uzun, daha iyi yaşam</h2>
-                    <ul class="science-list">
-                        <li>Hakemli dergilerde yayınlanmış araştırmalara dayanır</li>
-                        <li>Uzman danışma kurulu tarafından gözden geçirilir</li>
-                        <li>Düzenli olarak güncellenir</li>
-                        <li>Ticari çıkarlardan bağımsızdır</li>
-                    </ul>
-                    <a href="pages/bilim.html" class="btn btn-outline" style="border-color: rgba(255,255,255,0.3); color: white;">
-                        Bilimsel Yaklaşımımız →
-                    </a>
-                </div>
+    <!-- BLOG SECTION -->
+    <section style="padding: 5rem 2rem; background: white;">
+        <div style="max-width: 1200px; margin: 0 auto;">
+            <div style="text-align: center; margin-bottom: 3rem;">
+                <h2 style="font-size: 2rem; font-weight: 800; color: #1f2937; margin-bottom: 0.5rem;">Blog</h2>
+                <p style="color: #6b7280;">Sağlık, beslenme ve yaşam tarzı hakkında güncel yazılar</p>
+            </div>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
+                <a href="pages/blog/bilimsel-yaklasimimiz-neden-onemli.html" style="text-decoration: none; color: inherit;">
+                    <div style="background: #f8fafc; border-radius: 16px; overflow: hidden; border: 1px solid #e5e7eb; transition: all 0.3s;">
+                        <div style="height: 180px; background: linear-gradient(135deg, #195157, #2a7d83); display: flex; align-items: flex-end; padding: 1.25rem; position: relative;">
+                            <h3 style="color: white; font-size: 1.1rem; font-weight: 600; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">Bilimsel Yaklaşımımız: Neden Önemli?</h3>
+                        </div>
+                        <div style="padding: 1.25rem;">
+                            <p style="color: #6b7280; font-size: 0.9rem; margin-bottom: 0.5rem;">Kanıta dayalı, bağımsız bilgi sunma ilkelerimiz.</p>
+                            <span style="color: #9ca3af; font-size: 0.8rem;">📅 7 Şubat 2026</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="pages/blog/glp1-ilaclari-ve-kilo-verme-bilmeniz-gerekenler.html" style="text-decoration: none; color: inherit;">
+                    <div style="background: #f8fafc; border-radius: 16px; overflow: hidden; border: 1px solid #e5e7eb; transition: all 0.3s;">
+                        <div style="height: 180px; background: linear-gradient(135deg, #EC4899, #DB2777); display: flex; align-items: flex-end; padding: 1.25rem; position: relative;">
+                            <h3 style="color: white; font-size: 1.1rem; font-weight: 600; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">GLP-1 İlaçları ve Kilo Verme</h3>
+                        </div>
+                        <div style="padding: 1.25rem;">
+                            <p style="color: #6b7280; font-size: 0.9rem; margin-bottom: 0.5rem;">Ozempic, Wegovy nasıl çalışır? Bilmeniz gerekenler.</p>
+                            <span style="color: #9ca3af; font-size: 0.8rem;">📅 7 Şubat 2026</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="pages/blog/blue-zones-dunyanin-en-uzun-yasayan-insanlarinin-9-sirri.html" style="text-decoration: none; color: inherit;">
+                    <div style="background: #f8fafc; border-radius: 16px; overflow: hidden; border: 1px solid #e5e7eb; transition: all 0.3s;">
+                        <div style="height: 180px; background: linear-gradient(135deg, #06B6D4, #0891B2); display: flex; align-items: flex-end; padding: 1.25rem; position: relative;">
+                            <h3 style="color: white; font-size: 1.1rem; font-weight: 600; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">Blue Zones: Uzun Yaşamın 9 Sırrı</h3>
+                        </div>
+                        <div style="padding: 1.25rem;">
+                            <p style="color: #6b7280; font-size: 0.9rem; margin-bottom: 0.5rem;">Dünyanın en uzun yaşayan insanlarının ortak özellikleri.</p>
+                            <span style="color: #9ca3af; font-size: 0.8rem;">📅 7 Şubat 2026</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div style="text-align: center; margin-top: 2rem;">
+                <a href="pages/blog.html" style="display: inline-block; padding: 0.875rem 1.75rem; border: 2px solid #195157; color: #195157; border-radius: 10px; text-decoration: none; font-weight: 600;">Tüm Yazıları Gör →</a>
             </div>
         </div>
     </section>
